css/parser/tests/errors/url/eof/output.stderr
error: Expected "}"
 --> $DIR/tests/errors/url/eof/input.css:1:22
  |
1 | a { prop: url(foo.png
  |                      ^

